# gig

./: .gitignore  Cargo.toml  README.md
license-templates/: bsd-2-clause.tmpl  bsd-3-clause.tmpl  wtfpl.tmpl
src/: err.rs  main.rs  ops.rs  parser.rs
