[package]
name = "gig-cli"
version = "0.2.0"
authors = ["Milan <hey@mdaverde.com>"]
edition = "2018"
homepage = "https://github.com/mdaverde/gig"
repository = "https://github.com/mdaverde/gig"
license = "MIT"
readme = "README.md"
description = "Simple cli to create a .gitignore based off Github's gitignore repo"
categories = ["command-line-utilities"]
keywords = ["cli", "gitignore", "github", "git", "repo"]

[[bin]]
name = "gig"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
ureq = { version = "2.1.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "3.5.5"